# clandestine-platform

./: .gitignore  README.md  config.kdl  dev.env.example  example.config.yaml  requirements.txt
clandestine-platform/: .pdm-python  package.json  prod.env.example  pyproject.toml
clandestine-platform/resources/: App.svelte  main.ts
clandestine-platform/resources/lib/components/auth/Login/: UserLoginAuthForm.svelte
clandestine-platform/resources/pages/auth_views/: Login.svelte
clandestine-platform/src/app/: asgi.py
clandestine-platform/src/app/application/config/: env_vars.py
clandestine-platform/src/app/application/database/models/: c2.py  c2_implant.py  c2_implant_infected_host.py  c2_implant_shell.py  c2_listener.py  c2_listener_protocol.py  c2_status.py  calendar.py  calendar_day.py  calendar_month.py  chat_document.py  event.py  llm.py  llm_agent.py  llm_status.py  organization.py  service.py  (+1 more)
clandestine-platform/src/app/application/server/: builder.py  plugins.py
clandestine-platform/src/app/services/agentic-network-scanner/: agent_runner.py
clandestine-platform/src/app/services/redis/: Dockerfile
clandestine-platform/tests/htmx-version/pages/auth/: login_base.html
conti-platform/: Dockerfile  components.json  main.py  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  tsconfig.node.json  vite.config.ts
conti-platform/resources/pages/auth_views/: Login.svelte
conti-platform/src/app/application/config/: env_vars.py
conti-platform/src/app/services/: SERVICES.md
conti-platform/tests/htmx-version/auth/: repositories.py  schemas.py
(+126 files in other folders)
