[project]
name = "clandestine-platform"
version = "0.0.3"
description = "Default template for PDM package"
authors = [
    {name = "Cam", email = "cammclain@skiff.com"},
]
dependencies = [
    "litestar-granian>=0.5.0",
    "redis>=5.0.7",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
